# flexibuff

./: .gitignore  README.md  example.py  marl_example.py  pyproject.toml  test.py
src/: .gitignore  __init__.py  flexibuff.py  pyproject.toml
src/flexibuff/: __init__.py  flexibuff.py
