[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexibuff"
version = "0.1.5"
authors = [
  { name="Timothy Flavin", email="timothy.c.flavin@gmail.com" },
]
description = "Multi-Agent RL memory buffer which supports Numpy array and PyTorch Tensor formats"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Timothy-Flavin/flexibuff/"
"Bug Tracker" = "https://github.com/Timothy-Flavin/flexibuff/issues"